[gd_scene load_steps=6 format=2]

[ext_resource path="res://PhoneManager/PhoneManager.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://PhoneManager/Screen.gd" type="Script" id=3]
[ext_resource path="res://PhoneManager/TextInput.tscn" type="PackedScene" id=4]
[ext_resource path="res://PhoneManager/Buttons.gd" type="Script" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 61.0
margin_top = 23.0
margin_right = 344.0
margin_bottom = 386.0
texture = ExtResource( 2 )
expand = true

[node name="ViewportContainer" type="ScrollContainer" parent="."]
margin_left = 81.0
margin_top = 67.0
margin_right = 326.0
margin_bottom = 310.0

[node name="Screen" type="Control" parent="ViewportContainer"]
script = ExtResource( 3 )

[node name="TextInput" parent="." instance=ExtResource( 4 )]
margin_left = 25.0793
margin_top = 330.95
margin_right = 65.0793
margin_bottom = 370.95

[node name="TextureTop" type="TextureRect" parent="."]
margin_left = 50.6389
margin_top = 21.1139
margin_right = 345.639
margin_bottom = 100.114
rect_pivot_offset = Vector2( 153.418, 64.7185 )
texture = ExtResource( 2 )
expand = true

[node name="Buttons" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="Button1" type="Button" parent="Buttons"]
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 58.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 50, 40 )
text = "1"

[node name="Button2" type="Button" parent="Buttons"]
margin_left = 1.01833
margin_right = 59.0183
margin_bottom = 55.0
rect_pivot_offset = Vector2( 50, 40 )
text = "2"

[node name="Button3" type="Button" parent="Buttons"]
margin_right = 58.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 50, 40 )
text = "3"

[node name="Button4" type="Button" parent="Buttons"]
margin_right = 58.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 50, 40 )
text = "4"

[node name="Button5" type="Button" parent="Buttons"]
margin_right = 58.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 50, 40 )
text = "5"

[node name="Button6" type="Button" parent="Buttons"]
margin_right = 58.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 50, 40 )
text = "6"

[node name="Button7" type="Button" parent="Buttons"]
margin_right = 58.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 50, 40 )
text = "7"

[node name="Button8" type="Button" parent="Buttons"]
margin_right = 58.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 50, 40 )
text = "8"

[node name="Button9" type="Button" parent="Buttons"]
self_modulate = Color( 0, 1, 0.109804, 1 )
margin_left = 369.377
margin_top = 6.35337
margin_right = 427.377
margin_bottom = 61.3533
rect_pivot_offset = Vector2( 50, 40 )
text = "9"

[node name="ShowHideButton" type="Button" parent="."]
margin_left = 426.957
margin_top = 65.6176
margin_right = 506.957
margin_bottom = 135.618
text = "Show/Hide"

[node name="SendButton" type="Button" parent="."]
margin_left = 309.0
margin_top = 316.0
margin_right = 376.0
margin_bottom = 368.0
text = "SEND"

[node name="InputComboTimer" type="TextureProgress" parent="."]
margin_left = 41.9817
margin_top = 42.8814
margin_right = 370.982
margin_bottom = 77.8814
min_value = 1.0
max_value = 3.0
step = 0.001
value = 2.46
texture_progress = ExtResource( 2 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="InputComboTimer"]
margin_left = 9.87912
margin_top = 1.7962
margin_right = 323.879
margin_bottom = 50.7962
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Combo:
"
align = 1
valign = 1

[connection signal="pressed" from="Buttons/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Buttons/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Buttons/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Buttons/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Buttons/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Buttons/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Buttons/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Buttons/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Buttons/Button9" to="." method="_on_Button9_pressed"]
[connection signal="button_down" from="ShowHideButton" to="." method="_on_ShowHideButton_button_down"]
[connection signal="pressed" from="SendButton" to="." method="_on_SendButton_pressed"]
